--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TaskNorg" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TaskNorg" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/primary</item>
@@ -8,8 +8,11 @@
         <item name="colorOnPrimary">@color/light_primary</item>
 
         <!--Status bar color-->
-        <item name="android:statusBarColor" tools:targetApi="1">?attr/colorPrimaryVariant</item>
+        <item name="android:windowActionBar" tools:targetApi="1">?attr/colorPrimaryVariant</item>
+<!--        <item name="android:navigationBarColor">@color/dark_primary</item>-->
+
+        <!--        <item name="android:navigationBarColor" tools:targetApi="1">?attr/colorPrimary</item>-->
     </style>
 
-    <style name="Theme.TaskNorg" parent="Base.Theme.TaskNorg" />
+<!--    <style name="Theme.TaskNorg" parent="Base.Theme.TaskNorg" />-->
 </resources>
