--- a/app/src/main/res/layout/add_new_task.xml
+++ b/app/src/main/res/layout/add_new_task.xml
@@ -37,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="8dp"
         android:text="Save"
+        android:textColor="@color/text_and_icons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_edit_text" />
 
