--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,15 +3,25 @@
     <style name="Base.Theme.TaskNorg" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/dark_primary</item>
-        <item name="colorOnPrimary">@color/light_primary</item>
+        <item name="colorPrimary">@color/primary</item> <!--Navigation Bar-->
+        <item name="colorPrimaryVariant">@color/dark_primary</item> <!--Status Bar-->
+        <item name="colorOnPrimary">@color/light_primary</item> <!--text color-->
 
         <!--Status bar color-->
         <item name="android:windowActionBar" tools:targetApi="1">?attr/colorPrimaryVariant</item>
-<!--        <item name="android:navigationBarColor">@color/dark_primary</item>-->
+    </style>
 
-        <!--        <item name="android:navigationBarColor" tools:targetApi="1">?attr/colorPrimary</item>-->
+    <!--Date picker dialog theme colors-->
+    <style name="CustomDatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/dark_primary</item> <!-- accent color -->
+        <item name="android:textColor">@color/black</item> <!-- text color -->
+        <item name="android:buttonBarButtonStyle">@style/CustomButtonStyle</item>
+    </style>
+
+    <!-- CustomButtonStyle.xml -->
+    <style name="CustomButtonStyle">
+        <item name="android:textColor">@color/primary</item> <!--text color -->
+        <item name="android:background">@color/white</item> <!--background color -->
     </style>
 
 <!--    <style name="Theme.TaskNorg" parent="Base.Theme.TaskNorg" />-->
