--- a/app/src/main/res/layout/each_task.xml
+++ b/app/src/main/res/layout/each_task.xml
@@ -16,13 +16,17 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="384dp"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="-20dp">
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/mcheckbox"
-                android:layout_width="395dp"
-                android:layout_height="46dp"
+                android:layout_width="385dp"
+                android:layout_height="43dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="16dp"
                 android:buttonTint="@color/primary_text"
                 android:paddingStart="10dp"
                 android:text="This is task 1"
@@ -39,7 +43,7 @@
                 android:text="1-11-2024"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="46dp" />
+                app:layout_constraintTop_toBottomOf="@+id/mcheckbox" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
