--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#3D8A44</color>
+    <color name="red">#FD3A4A</color>
 
 <!--     Colors to be used in the app-->
     <color name="primary">#673AB7</color>
